# chess

./: README.md
chess/: cell.cpp  cell.h  config.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  piece.cpp  piece.h
src/: CMakeLists.txt  cell.cpp  cell.h  chess.pro  config.h  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  piece.cpp  piece.h  piece_selector_widget.cpp  piece_selector_widget.h
src/resource/: resource.qrc
